# sinot

./: .gitignore  Example_Missing_Values.csv  LICENSE  README.md  Simulation_Example.ipynb  Simulation_Example_Missing_Values.ipynb  create_study_params.py  pyproject.toml  readme.md  simulation.py
example/: Simulation_Example.ipynb  Simulation_Example_Missing_Values.ipynb  Tutorial.ipynb  example_params.json  out.json  study_parameters.yaml
example/parameter/: dagitty_example.txt  example_params.json
example/sim_data/: Example_Missing_Values.csv
src/sinot/: Nodes.py  Simulation.py  create_study_params.py  dropout.py  generate_distributions.py  sim_node.py  sim_outcome.py  sim_treatment.py  utils.py
